# llm-inference

./: .gitignore  README.md  main.py  pyproject.toml
llm_inference/: __init__.py  inference.py
llm_inference/translation/: seed_x.py
vllm_inference/: __init__.py  inference.py  model.py
vllm_inference/translation/: seed_x.py
