[project]
name = "llm-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "transformers",
    "uvicorn>=0.35.0",
    "vllm",
    "vortezwohl>=0.0.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
