[project]
name = "llm-inference"
version = "0.0.9"
description = "Inference locally."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "transformers==4.51.3",
    "uvicorn>=0.35.0",
    "vllm==0.8.5.post1",
    "vortezwohl>=0.0.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
